--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,4 +1,8 @@
 
+<div class="flex items-center justify-center py-3">
+  <app-search></app-search>
+</div>
+
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap justify-center -m-4 gap-y-4">
@@ -7,7 +11,7 @@
           <img alt="ecommerce" class="object-cover object-center w-full h-full block" [src]="food.imageUrl" [alt]="food.name">
         </a>
         <div class="mt-4">
-          <!-- <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3> -->
+
           <h2 class="text-gray-900 title-font text-lg font-medium">{{food.name}}</h2>
           <p class="mt-1">{{food.price | currency:'INR'}}</p>
         </div>
