--- a/src/app/components/pages/search/search.component.html
+++ b/src/app/components/pages/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="w-screen flex items-center justify-center gap-x-3">
+<div class="w-full flex items-center justify-center gap-x-2">
    <input
     class="w-3/4 outline-none bg-red-50 p-3 rounded-md"
     #s type="text" placeholder="Search food in foodCorner"
