--- a/src/app/components/pages/food-page/food-page.component.html
+++ b/src/app/components/pages/food-page/food-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap justify-center -m-4 gap-y-4">
+<div class="flex flex-wrap justify-center  gap-y-4">
   <div class="lg:w-1/4 md:w-1/2 p-4 w-full" >
     <a class="block relative h-48 rounded overflow-hidden" routerLink="/food/{{food.id}}">
       <img alt="ecommerce" class="object-cover object-center w-full h-full block" [src]="food.imageUrl" [alt]="food.name">
