minor size changes

--- a/src/app/components/pages/food-page/food-page.component.html
+++ b/src/app/components/pages/food-page/food-page.component.html
@@ -37,6 +37,12 @@
           Time to cook about <strong>{{food.cookTime}}</strong> Minutes
         </span>
       </div>
+      <div class="price">
+        {{food.price | currency:'INR'}}
+      </div>
+      <button type="button" class="text-white p-2 bg-blue-500 rounded-xl mt-2">
+        Add to Cart
+      </button>
     </div>
   </div>
 </div>
